<resources>
    <string name="prenom">Prénom</string>
    <string name="age">Age</string>
    <string name="domaine">Domaine de compétence</string>
    <string name="numerotel">Numéro de téléphone</string>
    <string name="button">Envoyer</string>
    <string name="alertenom">Validé</string>
    <string name="alertecontenu">Les données sont bien envoyées!</string>
    <string name="app_name">L\'application de Maxime REITER</string>
    <string name="nom">Nom</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="validate">Voulez vous valider ces informations?</string>
    <string name="valide">Confirmation</string>
    <string name="placeholder" translatable="false">placeholder</string>
    <string name="confirm">Confirmer</string>
    <string name="returna">Retour</string>
    <string name="appel">Appeler</string>

</resources>